# MT_FastAPI

./: README.md
FastAPI_Main/: pyproject.toml
FastAPI_Main/fastapi_main/app/: asgi.py  config.py  logger.py  main.py  models.py  routes.py  schemas.py
FastAPI_Main/fastapi_main/tests/: test_api.py
FastAPI_Venv/: pyvenv.cfg
FastAPI_Venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
